Avoid textoverflow in datasources

--- a/thinkhazard/static/less/report.less
+++ b/thinkhazard/static/less/report.less
@@ -241,6 +241,14 @@ body {
       border-top: 0 !important;
     }
   }
+  dl {
+    font-size: 17px;
+  }
+  dd {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
 }
 
 .logo-gfdrr {
